# airflow-dags

./: .airflowignore  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
dags/: example_k8s_etl.py  moynihan_departures_arrivals.py  moynihan_trains.py
dags/clients/: moynihan.py  moynihan_webdriver.py
tests/: test_dag_integrity.py
