[project]
name = "airflow-dags"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow-providers-cncf-kubernetes>=10.19.0",
    "apache-airflow-providers-mongo>=5.4.0",
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "playwright>=1.61.0",
    "playwright-stealth>=2.0.3",
    "pymongo>=4.17.0",
    "pytz>=2026.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "Q", "UP", "AIR"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
